# rd_nb2_qq_bot

./: README.md  bot.py
RedstoneDaily/: Data.py  Utils.py
RedstoneDaily/Plugins/: Config.py  Daily.py  Helper.py  Manage.py
RedstoneDaily/Plugins/Permission/: Base.py  Subscribe.py  __init__.py
RedstoneDaily/Plugins/utils/: __init__.py  group.py
RedstoneDaily/utils/: decorators.py  user.py
rd/: bot.py  build.bat  pyproject.toml
rd/rd/plugins/rd/: __init__.py  daily.py  games.py  help.py  manage.py  op.py  utils_old.py
rd/rd/plugins/rd/utils/: __init__.py  database.py  group.py  user.py
redstone_daily/: Data.py  Utils.py
redstone_daily/plugins/: Config.py  Daily.py  Games.py  Helper.py  Manage.py  status.py  todo.py  tools.py
redstone_daily/plugins/Permission/: Base.py  Subscribe.py  __init__.py  todo.py
redstone_daily/plugins/utils/: __init__.py  database.py  decorators.py  group.py  user.py
