[project]
name = "rd"
version = "0.1.0"
description = "rd"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_localstore", "nonebot_plugin_addFriend"]
plugin_dirs = ["rd/plugins"]
builtin_plugins = ["echo"]
